--- a/popup.html
+++ b/popup.html
@@ -5,14 +5,25 @@
     <script src="js/jquery-1.8.3.js" type="text/javascript"></script>
     <script src="js/popup.js" type="text/javascript"></script>
     <style type="text/css">
-        
+        #popup_body
+        {
+            width: 425px;
+            text-align: center;
+        }
+        #services_list
+        {
+            display: flex;
+            flex-wrap: wrap;
+        }
+        ul
+        {
+            padding: 0px 30px;
+            padding-bottom: 40px;
+        }
     </style>
 </head>
-<body style="width: 100px; text-align: center;">
+<body id="popup_body">
     <ul id="services_list">
-        <li class="menu-item">service1</li>
-        <li class="menu-item">service2</li>
-        <li class="menu-item">service3</li>
         <!-- 无可用服务器！-->
     </ul>
     <footer id="btnOptions">
